--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "ts-lint-commit-hook": "tsc --noEmit --incremental"
   },
   "dependencies": {
+    "@emotion/cache": "^11.10.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.17",
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -30,6 +35,7 @@
     "prettier": "^2.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
