--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.17",
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
