--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "antd": "^5.0.7",
     "docker-compose": "^0.23.17",
     "dockerode": "^3.3.4",
     "eslint": "8.29.0",
@@ -37,6 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-js-cron": "^3.0.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
