--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.10.17",
-    "@types/node": "18.11.13",
+    "@mui/material": "^5.11.0",
+    "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "antd": "^5.0.7",
@@ -42,6 +42,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/dockerode": "^3.3.14"
+    "@types/dockerode": "^3.3.14",
+    "npm-check": "^6.0.1"
   }
 }
